# bluebikes-analysis

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  todo.txt
.github/workflows/: snapshot_stations.yml
bluebikes_analysis/plots/: __init__.py  plots.py
bluebikes_analysis/tasks/aggregate_trips/: __init__.py  __main__.py  aggregate_trips.py  config.yaml  types.py
bluebikes_analysis/tasks/download_stations_data/: __init__.py  __main__.py  config.yaml  download_stations_data.py  types.py
bluebikes_analysis/tasks/download_trips_data/: __init__.py  __main__.py  config.yaml  download_trips_data.py  types.py
bluebikes_analysis/tasks/generate_timeseries/: __init__.py  __main__.py  config.yaml  generate_timeseries.py  types.py
bluebikes_analysis/utils/: __init__.py  plots.py
data/raw/stations/: station_status_260212_225317.csv  station_status_260213_041133.csv  station_status_260213_055749.csv  station_status_260213_113002.csv  station_status_260213_131944.csv  station_status_260213_140232.csv  station_status_260213_143912.csv  station_status_260213_224131.csv  station_status_260214_040132.csv  station_status_260214_054223.csv  station_status_260214_112040.csv  station_status_260214_130705.csv  station_status_260214_134406.csv  station_status_260214_142507.csv  station_status_260214_223249.csv  station_status_260215_041252.csv  station_status_260215_055502.csv  station_status_260215_112041.csv  station_status_260215_130915.csv  station_status_260215_134519.csv  station_status_260215_142539.csv  station_status_260216_054810.csv  station_status_260216_060514.csv  station_status_260216_113844.csv  station_status_260216_115812.csv  station_status_260216_132202.csv  station_status_260216_134401.csv  station_status_260216_140515.csv  station_status_260216_142643.csv  station_status_260216_143942.csv  station_status_260217_053929.csv  station_status_260217_055558.csv  station_status_260217_113753.csv  station_status_260217_115838.csv  station_status_260217_132250.csv  station_status_260217_134318.csv  station_status_260217_140655.csv  station_status_260217_142908.csv  station_status_260217_144254.csv  station_status_260218_054154.csv  (+160 more)
notebooks/: 00_trips_eda.ipynb  00_trips_preview.ipynb  01_daily_aggregate_eda.ipynb  02_stationarity_analysis.ipynb
